third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_complex_expression2.exp
error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/invalid_call_lhs_complex_expression2.move:3:9
  │
3 │         (if (true) 5 else 0)();
  │         ^^^^^^^^^^^^^^^^^^^^ Calls through computed functions not supported by this compiler

error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/invalid_call_lhs_complex_expression2.move:4:9
  │
4 │         (while (false) {})(0, 1);
  │         ^^^^^^^^^^^^^^^^^^ Calls through computed functions not supported by this compiler

